--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div id="page-list">
         <div class="bg-success text-white p-4 mb-3 text-center" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-            <h2 class="fw-bold m-0">⛺ CampCount</h2>
+            <h2 class="fw-bold m-0">⛺CampCount🏕</h2>
             <small class="opacity-75">輕鬆紀錄露營開支</small>
         </div>
 
@@ -77,7 +77,7 @@
                 <div class="row g-2">
                     <div class="col-6"><input type="date" id="newStartDate" class="form-control"></div>
                     <div class="col-6"><input type="date" id="newEndDate" class="form-control"></div>
-                    <div class="col-12"><input type="text" id="newLoc" class="form-control" placeholder="輸入地點 (例: 苗栗星空)"></div>
+                    <div class="col-12"><input type="text" id="newLoc" class="form-control" placeholder="輸入地點 (例: 基維爾營地)"></div>
                     <div class="col-12"><button onclick="createTrip()" class="btn btn-dark w-100 fw-bold">＋ 建立活動</button></div>
                 </div>
             </div>
@@ -445,4 +445,5 @@
     }
 </script>
 </body>
+
 </html>
