--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CampCount V4 (Mobile)</title>
+    <title>CampCount V4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
@@ -67,7 +67,7 @@
 
     <div id="page-list">
         <div class="bg-success text-white p-4 mb-3 text-center" style="border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
-            <h2 class="fw-bold m-0">⛺CampCount🏕</h2>
+            <h2 class="fw-bold m-0">⛺CampCount</h2>
             <small class="opacity-75">輕鬆紀錄露營開支</small>
         </div>
 
@@ -447,3 +447,4 @@
 </body>
 
 </html>
+
